--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "Link-Bot",
-  "version": "1.0.0",
+  "name": "link-bot",
+  "version": "2.0.0-beta.1",
   "description": "",
+  "license": "MIT",
+  "author": "Cohen Erickson <contact@cohenerickson.com>",
+  "keywords": [ "discord", "discordjs", "discord-bot", "discord-js", "djs", "topgg", "discord-js-v14", "djs-v14" ],
+  "homepage": "https://github.com/Radon-Games/Link-Bot#readme",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Radon-Games/Link-Bot.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Radon-Games/Link-Bot/issues"
   },
-  "homepage": "https://github.com/Radon-Games/Link-Bot#readme",
+  "dependencies": {},
+  "devDependencies": {},
   "engines": {
     "node": ">=16.x"
   }
